chore: clean up index.html

--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,15 @@
 <html>
 <head>
   <title>Angular2 WebPack Seed</title>
-  <script src="https://rawgit.com/jmcriffey/bower-traceur/master/traceur.js"></script>
-  <!-- // <script src="https://rawgit.com/WebReflection/es6-collections/master/es6-collections.js"></script> -->
-  <!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.27.1/es6-shim.js"></script> -->
-  <script src="https://rawgit.com/angular/zone.js/master/zone.js"></script>
-  <script src="https://rawgit.com/angular/zone.js/master/long-stack-trace-zone.js"></script>
+  <script src="/lib/traceur.min.js"></script>
   <script src="/__build__/shared.js"></script>
-  <!-- // <script src="/__build__/angular2.js"></script> -->
-  <script src="/__build__/app.js"></script>
 </head>
 <body>
-  Hello website
 
-  <app></app>
+  <app>
+    Loading...
+  </app>
 
+  <script src="/__build__/app.js"></script>
 </body>
 </html>
