chore: update webpack server

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     Loading...
   </app>
 
+  <script src="http://localhost:8080/webpack-dev-server.js"></script>
   <script src="/__build__/app.js"></script>
 </body>
 </html>
