--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Angular2 WebPack Seed</title>
+  <title>Angular2 Webpack Starter</title>
+  <!-- Angular 2 -->
   <script src="/lib/traceur.min.js"></script>
+  <!-- Shared files to be cached -->
   <script src="/__build__/shared.js"></script>
 </head>
 <body>
@@ -11,7 +13,7 @@
     Loading...
   </app>
 
-  <script src="http://localhost:8080/webpack-dev-server.js"></script>
+   <!-- App -->
   <script src="/__build__/app.js"></script>
 </body>
 </html>
