refactor(index.html): update meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
 <head>
-  <title>Angular2 Webpack Starter</title>
+  <title>Angular2 Webpack Starter by @AngularClass</title>
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <base href="/">
+  <!-- styles -->
+  <link href="/css/angular2_material.css" rel="stylesheet" type="text/css">
   <!-- Angular 2 -->
   <script src="/lib/traceur.min.js"></script>
   <!-- Shared files to be cached -->
