refactor(webpack.config): pending production mode

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="">
 <head>
-  <title>Angular2 Webpack Starter by @AngularClass</title>
+  <title>Angular2 Webpack Starter by @gdi2990 from @AngularClass</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,8 +13,6 @@
   <link href="/css/angular2_material.css" rel="stylesheet" type="text/css">
   <!-- Angular 2 -->
   <script src="/lib/traceur.min.js"></script>
-  <!-- Shared files to be cached -->
-  <script src="/__build__/shared.js"></script>
 </head>
 <body>
 
@@ -22,7 +20,8 @@
     Loading...
   </app>
 
-   <!-- App -->
-  <script src="/__build__/app.js"></script>
-</body>
+  <!-- Shared files to be cached -->
+  <script src="/__build__/shared.js"></script>
+  <!-- App script -->
+  <script src="/__build__/app.js"></script></body>
 </html>
