refactor: common and angular2 file

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,10 @@
     Loading...
   </app>
 
-  <!-- Shared files to be cached -->
-  <script src="/__build__/shared.js"></script>
+  <!-- Commmon files to be cached -->
+  <script src="/__build__/common.js"></script>
+  <!-- Angular2 files -->
+  <script src="/__build__/angular2.js"></script>
   <!-- App script -->
   <script src="/__build__/app.js"></script></body>
 </html>
