--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,11 @@
   <base href="/">
   <!-- styles -->
   <link href="/css/angular2_material.css" rel="stylesheet" type="text/css">
-  <!-- Angular 2 -->
+  <!-- 
+    Angular 2
+    traceur-runtime: is only needed for ES6 browser polyfill
+    this is not the full traceur only the polyfills
+  -->
   <script src="/lib/traceur-runtime.min.js"></script>
 </head>
 <body>
