--- a/src/public/index.html
+++ b/src/public/index.html
@@ -12,9 +12,8 @@
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 
   <base href="/">
-  <!-- styles
+  <!-- styles -->
   <link href="/css/angular2_material.css" rel="stylesheet" type="text/css">
-  -->
   <!--
     Angular 2
     traceur-runtime: is only needed for ES6 browser polyfill
@@ -33,6 +32,7 @@
   <!-- Angular2 files -->
   <script src="/__build__/angular2.js"></script>
   <!-- App script -->
-  <script src="/__build__/app.js"></script>
+  <script src="/__build__/app-simple.js"></script>
+  <!-- TODO: replace /app-simple.js with /app.js -->
 </body>
 </html>
