--- a/src/public/index.html
+++ b/src/public/index.html
@@ -13,7 +13,11 @@
 
   <base href="/">
   <!-- styles -->
-  <link href="/css/angular2_material.css" rel="stylesheet" type="text/css">
+  <style>
+    body {
+      margin: 0;
+    }
+  </style>
   <!--
     Angular 2
     traceur-runtime: is only needed for ES6 browser polyfill
@@ -32,7 +36,6 @@
   <!-- Angular2 files -->
   <script src="/__build__/angular2.js"></script>
   <!-- App script -->
-  <script src="/__build__/app-simple.js"></script>
-  <!-- TODO: replace /app-simple.js with /app.js -->
+  <script src="/__build__/app.js"></script>
 </body>
 </html>
