chore(webpack.config): remove app-simple

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -22,9 +22,10 @@
   </style>
   <!--
     Angular 2
-    ES6 browser shim
+    traceur-runtime: is only needed for ES6 browser polyfill
+    this is not the full traceur only the polyfills
   -->
-  <script src="/lib/es6-shim.js"></script>
+  <script src="/lib/traceur-runtime.min.js"></script>
 </head>
 <body>
 
