--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="">
 <head>
 
-  <title><%= webpackConfig.metadata.title %></title>
+  <title>{%= o.webpackConfig.metadata.title %}</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="<%= webpackConfig.metadata.title %>">
+  <meta name="description" content="{%= o.webpackConfig.metadata.title %}">
 
   <!-- use http://www.favicon-generator.org/ to replace files in public/icon-->
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/icon/apple-icon-57x57.png">
@@ -30,7 +30,11 @@
   <!-- end favicon -->
 
   <!-- base url -->
-  <base href="<%= webpackConfig.metadata.baseUrl %>">
+  <base href="{%= o.webpackConfig.metadata.baseUrl %}">
+
+  {% for (var css in o.htmlWebpackPlugin.files.css) { %}
+  <link href="{%= o.htmlWebpackPlugin.files.css[css] %}" rel="stylesheet">
+  {% } %}
 
 </head>
 
@@ -51,10 +55,15 @@
     ga('send', 'pageview');
   </script>
 
-  <% if (webpackConfig.metadata.ENV === 'development') { %>
+  {% if (o.webpackConfig.metadata.ENV === 'development') { %}
   <!-- Webpack Dev Server reload -->
-  <script src="http://<%= webpackConfig.metadata.host %>:<%= webpackConfig.metadata.port %>/webpack-dev-server.js"></script>
-  <% } %>
+  <script src="http://{%= o.webpackConfig.metadata.host %}:{%= o.webpackConfig.metadata.port %}/webpack-dev-server.js"></script>
+  {% } %}
+
+  <!-- Webpack HtmlWebpackPlugin manually inject scripts -->
+  {% for (var chunk in o.htmlWebpackPlugin.files.chunks) { %}
+  <script src="{%= o.htmlWebpackPlugin.files.chunks[chunk].entry %}"></script>
+  {% } %}
 
 </body>
 </html>
